hhhh wlh ala 8alib

--- a/home.css
+++ b/home.css
@@ -122,12 +122,12 @@ header.active {
 
 .titre .third-line {
     font-size: 20px;
-    color: #ffcb15;
+    color: #88fdae;
 }
 
 .titre .line-four {
     font-size: 20px;
-    color: #ffcb15;
+    color: #88fdae;
 }
 
 
